# temoto_nl_interface

./: CMakeLists.txt  README.md  package.xml  setup.cfg
launch/: launch_nl_interface.py
nl_interface_msgs/: CMakeLists.txt  package.xml
nl_interface_msgs/action/: PrimaryAction.action
temoto_nl_interface/actions/find_coordinates/include/find_coordinates/: input_parameters.hpp  temoto_action.hpp
temoto_nl_interface/actions/find_coordinates/src/: find_coordinates.cpp  find_coordinates_run.cpp  find_coordinates_run.py
temoto_nl_interface/actions/find_coordinates/src/get_coordinates_scripts/: getcoord_grid_generation.cpp  getcoord_newcoordmap_generation.cpp  getcoord_nonTraversable_generation.cpp  getcoord_objectmap_generation.cpp  getcoord_origincoord_return.cpp  getcoord_pathfind_return.cpp  getcoord_pixelcoord_return.cpp  getcoord_robotmap_generation.cpp  getcoord_scalemap_generation.cpp  getcoordinates_costmap_gen.cpp
temoto_nl_interface/actions/find_coordinates/src/getcoord_py/: getcoord_costmap_generation.py  getcoord_grid_generation.py  getcoord_newcoordmap_generation.py  getcoord_nonTraversable_generation.py  getcoord_objectmap_generation.py  getcoord_origincoord_return.py  getcoord_pathfind_return.py  getcoord_pixelcoord_return.py  getcoord_robotmap_generation.py  getcoord_scalemap_generation.py
temoto_nl_interface/ai/: ai_core.py
temoto_nl_interface/ai/prompts/: chat_interface_prompt.py  error_handling_prompt.py  getcoord_prompt.py  getcoord_prompt_check.py  getcoord_prompt_coord.py  getcoord_prompt_id.py  memory_prompt.py
temoto_nl_interface/nodes/: cam_publisher.py  cam_publisher_feed.py  cam_publisher_sim.py  chat_interface.py  display_interface.py  error_handler.py  fake_nav.py  memory.py  umrf_planner.py
