<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temoto_nl_interface</name>
  <version>0.0.0</version>
  <description>Provides natural language interface for TEMOTO</description>
  <maintainer email="fyier@icloud.com">fyier</maintainer>
  <license>Apache-2.0</license>

  <!-- Change build tool to ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>temoto_msgs</depend>
  <depend>cv_bridge</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>nl_interface_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>python3-pip</exec_depend>


  <export>
    <!-- Change build type to ament_cmake -->
    <build_type>ament_cmake</build_type>
  </export>
</package>